6930398: fix for return address locals in OSR entries uses wrong test

Reviewed-by: kvn